[package]
name = "interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
either.workspace = true
memchr.workspace = true
thiserror.workspace = true
tracing.workspace = true
parser.workspace = true
indexmap = "2.14.0"

[lints]
workspace = true
